Properly handle files as a special case.

BUG: 246689
FIXED-IN: 4.5.1

svn path=/trunk/KDE/kdebase/workspace/; revision=1159431